--- a/swagger-template/README.mustache
+++ b/swagger-template/README.mustache
@@ -1,21 +1,20 @@
-# {{artifactId}}
+# Documentation for API endpoints
 
-A Java API client for the APIs offered by [Postmark](https://postmarkapp.com/api-explorer), allowing you to send and receive e-mail from your Java application using the Server API.
-Furthermore, you can configure your Postmark account using the Account API.
+All URIs are relative to *{{basePath}}*
 
-The code in this repository is generated using [Swagger Codegen](https://github.com/swagger-api/swagger-codegen).
+Class | Method | HTTP request | Description
+------------ | ------------- | ------------- | -------------
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationId}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}
+{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 
-## Installation
+## Documentation for Models
 
-Add this dependency to your project's POM:
+{{#models}}{{#model}} - [{{classname}}]({{modelDocPath}}{{classname}}.md)
+{{/model}}{{/models}}
 
-```xml
-<dependency>
-    <groupId>{{{groupId}}}</groupId>
-    <artifactId>{{{artifactId}}}</artifactId>
-    <version>{{{artifactVersion}}}</version>
-</dependency>
-```
+## Documentation for Authorization
+
+Authentication happens using an authentication HTTP header. Use the API key generated through the Postmark website for this particular API.
 
 ## Example usage
 
@@ -27,9 +26,6 @@ import {{{invokerPackage}}}.*;
 import {{{invokerPackage}}}.auth.*;
 import {{{modelPackage}}}.*;
 import {{{package}}}.{{{classname}}};
-
-import java.io.File;
-import java.util.*;
 
 public class {{{classname}}}Example {
 
@@ -66,50 +62,3 @@ public class {{{classname}}}Example {
 }
 {{/-first}}{{/operation}}{{/operations}}{{/-first}}{{/apis}}{{/apiInfo}}
 ```
-
-## Documentation for API Endpoints
-
-All URIs are relative to *{{basePath}}*
-
-Class | Method | HTTP request | Description
------------- | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationId}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}
-{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
-
-## Documentation for Models
-
-{{#models}}{{#model}} - [{{classname}}]({{modelDocPath}}{{classname}}.md)
-{{/model}}{{/models}}
-
-## Documentation for Authorization
-
-{{^authMethods}}All endpoints do not require authorization.
-{{/authMethods}}Authentication schemes defined for the API:
-{{#authMethods}}### {{name}}
-
-{{#isApiKey}}- **Type**: API key
-- **API key parameter name**: {{keyParamName}}
-- **Location**: {{#isKeyInQuery}}URL query string{{/isKeyInQuery}}{{#isKeyInHeader}}HTTP header{{/isKeyInHeader}}
-{{/isApiKey}}
-{{#isBasic}}- **Type**: HTTP basic authentication
-{{/isBasic}}
-{{#isOAuth}}- **Type**: OAuth
-- **Flow**: {{flow}}
-- **Authorizatoin URL**: {{authorizationUrl}}
-- **Scopes**: {{^scopes}}N/A{{/scopes}}
-{{#scopes}}  - {{scope}}: {{description}}
-{{/scopes}}
-{{/isOAuth}}
-
-{{/authMethods}}
-
-## Recommendation
-
-It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.
-
-{{#apiInfo}}{{#apis}}{{^hasMore}}{{infoEmail}}
-{{/hasMore}}{{/apis}}{{/apiInfo}}
-
-## Development
-
-Building the API client library requires [Maven](https://maven.apache.org/) to be installed as well as at least Java 7.
